# ZOHO_ANALYTICS_GENERATIVE_UI

./: README.md
analytics-mcp-server-main/: LICENSE  README.md
analytics-mcp-server-main/docker/: Dockerfile  requirements.test.txt  requirements.txt
analytics-mcp-server-main/docker/libs/sql_limit_enforcer/: pyproject.toml
analytics-mcp-server-main/docker/libs/sql_limit_enforcer/sql_limit_enforcer/: __init__.py  enforcer.py
analytics-mcp-server-main/docker/src/: config.py  http_server.py  logging_util.py  mcp_instance.py  stdio.py
analytics-mcp-server-main/docker/src/auth/: persistence.py  rate_limiter.py  remote_auth.py
analytics-mcp-server-main/docker/src/sdk/: analytics_client.py  catalyst_client.py  redis_client.py
analytics-mcp-server-main/docker/src/tools/: __init__.py  data_tools.py  metadata_tools.py  modelling_tools.py  row_tools.py
analytics-mcp-server-main/docker/src/utils/analytics/: data.py
analytics-mcp-server-main/node/: manifest.json  package-lock.json  package.json  tsconfig.json
analytics-mcp-server-main/node/src/: AnalyticsClient.js  index.ts
analytics-mcp-server-main/node/src/tools/: data-tools.ts  metadata-tools.ts  modelling-tools.ts  row-tools.ts
analytics-mcp-server-main/node/src/utils/: data-util.ts
