[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql_limit_enforcer"
version = "0.1.0"
description = "Enforce an upper LIMIT on MySQL-compatible SELECT queries"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
